[package]
name = "cdk-payment-processor-template"
version = "0.0.1"
edition = "2021"
authors = ["thesimplekid <tsk@thesimplekid.com>"]
description = "Generic CDK Payment Processor Template"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
cdk-common = { version = "0.15.0-rc.1", default-features = false, features = ["mint"] }
cdk-payment-processor = { version = "0.15.0-rc.1", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
futures-core = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "test-util"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
tonic-build = "0.14"

[features]
default = []
