[package]
name = "cdk-payment-processor-template"
version = "0.0.1"
edition = "2021"
authors = ["thesimplekid <tsk@thesimplekid.com>"]
description = "Generic CDK Payment Processor Template"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
cdk-common = { git = "https://github.com/thesimplekid/cdk", branch = "onchain_bdk", default-features = false, features = ["mint", "grpc"] }
cdk-payment-processor = { git = "https://github.com/thesimplekid/cdk", branch = "onchain_bdk", default-features = false }
ark-lib = "0.1.4"
bark-bitcoin-ext = "0.1.4"
bark-wallet = { version = "0.1.4", features = ["onchain-bdk"] }
bip39 = "2.0"
bitcoin = "0.32"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
futures = "0.3"
lightning-invoice = "0.34"
futures-core = "0.3.31"
redb = "4.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "test-util"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
tonic-build = "0.14"

[features]
default = []
